// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ConfluenceSearchDialog /> Renders no results when there is an error in pre-query 1`] = `
<Fragment>
  <SearchDialogContent>
    <ResultContainer>
      <InjectIntl(NoPreQueryResults) />
    </ResultContainer>
  </SearchDialogContent>
  <SearchFooter>
    <InjectIntl(ConfluenceAdvancedSearchBase)
      isLoading={false}
      query=""
    />
  </SearchFooter>
</Fragment>
`;

exports[`<ConfluenceSearchDialog /> matches snapshot 1`] = `
<Fragment>
  <SearchDialogContent>
    <ResultContainer>
      <_default
        isBelowTakeoverWidth={false}
        isPreQuery={true}
        items={
          Object {
            "isLoading": true,
            "results": null,
          }
        }
        people={
          Object {
            "isLoading": true,
            "results": null,
          }
        }
        query=""
        showFilters={false}
        spaces={
          Object {
            "isLoading": true,
            "results": null,
          }
        }
      />
    </ResultContainer>
  </SearchDialogContent>
  <SearchFooter>
    <InjectIntl(ConfluenceAdvancedSearchBase)
      isLoading={true}
      query=""
    />
  </SearchFooter>
</Fragment>
`;

exports[`<ConfluenceSearchDialog /> matches snapshot and does not render error when there are no results when searching 1`] = `
<Fragment>
  <SearchDialogContent>
    <ResultContainer>
      <_default
        isBelowTakeoverWidth={false}
        isPreQuery={false}
        items={
          Object {
            "isLoading": false,
            "results": Object {
              "items": Array [],
              "timings": 0,
              "totalSize": 99,
            },
          }
        }
        people={
          Object {
            "isLoading": false,
            "results": Object {
              "items": Array [],
              "timings": 0,
            },
          }
        }
        query="some query"
        showFilters={true}
        spaces={
          Object {
            "isLoading": false,
            "results": Object {
              "items": Array [],
              "timings": 0,
            },
          }
        }
      />
    </ResultContainer>
    <SidebarContainer>
      <FilterPane
        isLoading={false}
        query="some query"
      />
    </SidebarContainer>
  </SearchDialogContent>
  <SearchFooter>
    <InjectIntl(ConfluenceAdvancedSearchBase)
      isLoading={false}
      query="some query"
    />
  </SearchFooter>
</Fragment>
`;

exports[`<ConfluenceSearchDialog /> matches snapshot and renders error when there is an error when searching 1`] = `
<Fragment>
  <SearchDialogContent>
    <ResultContainer>
      <div
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <InjectIntl(SearchError)
          onRetry={[Function]}
        />
      </div>
    </ResultContainer>
    <SidebarContainer>
      <FilterPane
        isLoading={false}
        query="some query"
      />
    </SidebarContainer>
  </SearchDialogContent>
  <SearchFooter>
    <InjectIntl(ConfluenceAdvancedSearchBase)
      isLoading={false}
      query="some query"
    />
  </SearchFooter>
</Fragment>
`;

exports[`<ConfluenceSearchDialog /> renders a no results screen in pre-query 1`] = `
<Fragment>
  <SearchDialogContent>
    <ResultContainer>
      <_default
        isBelowTakeoverWidth={false}
        isPreQuery={true}
        items={
          Object {
            "isLoading": false,
            "results": Object {
              "items": Array [],
              "timings": 0,
              "totalSize": 99,
            },
          }
        }
        people={
          Object {
            "isLoading": false,
            "results": Object {
              "items": Array [],
              "timings": 0,
            },
          }
        }
        query=""
        showFilters={false}
        spaces={
          Object {
            "isLoading": false,
            "results": Object {
              "items": Array [],
              "timings": 0,
            },
          }
        }
      />
    </ResultContainer>
  </SearchDialogContent>
  <SearchFooter>
    <InjectIntl(ConfluenceAdvancedSearchBase)
      isLoading={false}
      query=""
    />
  </SearchFooter>
</Fragment>
`;
